--- a/Trabalho DADM/Anilhas.html
+++ b/Trabalho DADM/Anilhas.html
@@ -8,7 +8,7 @@
      </head>
 
      <body>
-         <form onsubmit="atrib()">
+         <form>
             <h1>Pack de Anilhas</h1>
             <img src="anilha1.jpg" alt="anilha" width="200px" height="200px">
                 <p>Valor incial de R$90,00. (32KG. 2x Inclusas)</p>
@@ -101,7 +101,7 @@
 
             <div id="calculo total">
                 <p>
-                    <input type="submit" onclick="atrib()">
+                    <button type="button" id="submit" onclick="atrib()">Calcular montante</button>
                     <output id="resultado"></output>
                 </p>
             </div>    
